social links added

--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -1530,12 +1530,18 @@ global marketplace for students.</p>
                         <img class="logo logo-light" alt="logo" src="~/images/logo-full-white.png" srcset="~/images/logo-full-white2x.png 2x">
                     </a>
                     <ul class="social">
-                        <li class="animated" data-animate="fadeInUp" data-delay=".1"><a href="#"><em class="fab fa-facebook-f"></em></a></li>
-                        <li class="animated" data-animate="fadeInUp" data-delay=".2"><a href="#"><em class="fab fa-twitter"></em></a></li>
-                        <li class="animated" data-animate="fadeInUp" data-delay=".3"><a href="#"><em class="fab fa-youtube"></em></a></li>
-                        <li class="animated" data-animate="fadeInUp" data-delay=".4"><a href="#"><em class="fab fa-github"></em></a></li>
-                        <li class="animated" data-animate="fadeInUp" data-delay=".5"><a href="#"><em class="fab fa-bitcoin"></em></a></li>
-                        <li class="animated" data-animate="fadeInUp" data-delay=".6"><a href="#"><em class="fab fa-medium-m"></em></a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay=".1">
+                            <a href="https://www.facebook.com/spitballstudy/" target="_blank"><em class="fab fa-facebook-f"></em></a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay=".2">
+                            <a href="https://twitter.com/SpitballStudy" target="_blank"><em class="fab fa-twitter"></em></a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay=".3">
+                            <a href="https://www.youtube.com/channel/UC9qGHTJixreP2bbwugmSi2Q?view_as=subscriber" target="_blank"><em class="fab fa-youtube"></em></a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay=".4">
+                            <a href="https://github.com/Cloudents/Spitball" target="_blank"><em class="fab fa-github"></em></a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay=".5">
+                            <a href="https://www.linkedin.com/company/spitball/" target="_blank"><em class="fab fa-linkedin"></em></a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay=".6">
+                            <a href="https://medium.com/@@spitballstudy" target="_blank"><em class="fab fa-medium-m"></em></a></li>
                     </ul>
                 </div><!-- .col  -->
                 <div class="col-sm-6 col-xl-4 res-l-bttm">
