css ICO page colors and etc

--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <nav class="container">
 
                 <a class="navbar-brand animated" data-animate="fadeInDown" data-delay=".65" href="./">
-                    <img class="logo logo-dark" alt="logo" src="~/images/logo.png" srcset="~/images/logo2x.png 2x">
+                    <img class="logo logo-dark" alt="logo" src="~/images/Spitball-blue.png" srcset="~/images/logo2x.png 2x">
                     <img class="logo logo-light" alt="logo" src="~/images/logo-full-white.png" srcset="~/images/logo-full-white2x.png 2x">
                 </a>
 
@@ -114,8 +114,8 @@
         <div class="container">
             <div class="gaps size-2x d-lg-none"></div>
             <div class="row">
-                <div class="col-md-6">
-                    <h6 class="ex-sm-head animated" data-animate="fadeInUp" data-delay="1.65">Our <br> Partners</h6>
+                <div class="col-md-7">
+                    <h3 class="animated" style="font-weight: 700;" data-animate="fadeInUp" data-delay="1.65">Our Partners</h3>
                     <img src="~/images/Partners-1.png" alt="partner">
                     <!-- <ul class="partner-list-s3 row flex-wrap-reverse">
                         <li class="col-4 animated" data-animate="fadeInUp" data-delay="1.7"><a href="#"><img src="~/images/partner-xs-solid-a.png" alt="partner"></a></li>
@@ -134,12 +134,12 @@
         <div class="container">
             <div class="gaps size-3x"></div>
             <div class="row align-items-center">
-                <div class="col-md-5 offset-md-1">
+                <!-- <div class="col-md-5 offset-md-1">
                     <div class="res-m-btm animated" data-animate="fadeInUp" data-delay=".1">
                         <img src="~/images/muscari/graph-muscari-a.png" alt="graph">
                     </div>
-                </div><!-- .col  -->
-                <div class="col-md-6 order-md-first order-last">
+                </div> -->
+                <div class="col-md-12 order-md-first order-last">
                     <div class="text-block">
                         <h2 class="animated" data-animate="fadeInUp" data-delay=".2">We’ve built a platform for students to buy, sell and share goods and services.</h2>
                         <p class="lead animated" data-animate="fadeInUp" data-delay=".3">…giving the power back to the students!</p>
@@ -1600,8 +1600,8 @@ global marketplace for students.</p>
     <a href="#" id="closeTelegramPopUp" class="fa fa-times"></a>
   <div class="card-body">
     <h5 class="card-title">WE’RE ON TELEGRAM</h5>
-    <p class="card-text">come ask us anything!</p>
-    <a href="https://t.me/Spitball" target="_blank" class="btn"><em class="fa fa-paper-plane" style="margin-right: 8px;"></em>Join us on Telegram</a>
+    <h3 class="card-text">come ask us anything!</h3>
+    <a href="https://t.me/Spitball" target="_blank" class="btn popUpbtn"><em class="fa fa-paper-plane" style="margin-right: 8px;"></em>Join us on Telegram</a>
   </div>
 </div>
     <!-- End Section -->
