--- a/Cloudents.Ico/wwwroot/css/theme.css
+++ b/Cloudents.Ico/wwwroot/css/theme.css
@@ -120,11 +120,11 @@ a {
 }
 
 .navbar .navbar-nav > li > a.nav-link.active {
-    color: #46bdf4;
+    color: #3532d5;
 }
 
 .navbar .navbar-nav .dropdown-menu .dropdown-item:hover, .navbar .navbar-nav .dropdown-menu .dropdown-item:focus, .navbar .navbar-nav .dropdown-menu .dropdown-item.active {
-    color: #46bdf4;
+    color: #3532d5;
 }
 
 .navbar .navbar-nav .dropdown-menu li:hover > a {
@@ -1159,7 +1159,7 @@ a {
     }
 
     .theme-muscari .site-header.has-fixed .navbar-nav > li > a {
-        color: #8484a4;
+        /* color: #8484a4; */
     }
 
     .theme-muscari .site-header.has-fixed .navbar .btn.btn-outline {
@@ -1184,7 +1184,7 @@ a {
         }
 
     .theme-muscari .section-muscari {
-        background: #3455ff;
+        background: #3632D5;
     }
 
     .theme-muscari .text-block {
@@ -1204,15 +1204,17 @@ a {
     }
 
     .theme-muscari .roadmap-item h6:before {
-        background: rgba(51, 153, 255, 0.3);
+        background:  #ffa30f;
+        opacity: 0.3;
     }
 
     .theme-muscari .roadmap-item h6:after {
-        background: #3399ff;
+        background: #ffa30f;
     }
 
     .theme-muscari .roadmap-done h6:before {
-        background: rgba(52, 85, 255, 0.3);
+        background: rgb(52, 85, 255);
+        opacity: 0.3;
     }
 
     .theme-muscari .roadmap-done h6:after {
@@ -1232,7 +1234,7 @@ a {
             }
 
         .theme-muscari .team-member .team-title {
-            color: #3455ff;
+            color: #3532d5;
         }
 /* 
         .theme-muscari .team-member .team-photo:before {
@@ -1284,11 +1286,11 @@ a {
         }
 
 .header-angle-bg {
-    background: #3455ff;
+    background: #3632D5!important;
 }
 
 .section-head-s5 .section-title:after {
-    background: #39a9ff;
+    background: #3632D5;
 }
 
 .section-bg-muscari .section-head-s5 .section-title:after {
@@ -1327,8 +1329,8 @@ a {
 }
 
 .section-bg-light .contact-info-alt li .fa {
-    color: #3455ff;
-    background: #3455ff;
+    color: #3532d5;
+    background: #3532d5;
 }
 
     .section-bg-light .contact-info-alt li .fa:after {
