--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -11,8 +11,8 @@
             <nav class="container">
 
                 <a class="navbar-brand animated" data-animate="fadeInDown" data-delay=".65" href="./">
-                    <img class="logo logo-dark" alt="logo" src="~/images/Spitball-blue.png" srcset="~/images/logo2x.png 2x">
-                    <img class="logo logo-light" alt="logo" src="~/images/logo-full-white.png" srcset="~/images/logo-full-white2x.png 2x">
+                    <img class="logo logo-dark" alt="logo" src="~/images/Spitball-blue.png" >
+                    <img class="logo logo-light" alt="logo" src="~/images/logo-full-white.png" >
                 </a>
 
                 <div class="language-switcher animated" data-animate="fadeInDown" data-delay=".75">
@@ -79,7 +79,7 @@
                                 </ul>
                             </div>
                         </div><!-- .col  -->
-                        <div class="col-lg-5 col-md-12 offset-lg-1 offset-md-0 res-m-bttm-lg">
+                        <div class="col-lg-6 col-md-12  offset-md-0 res-m-bttm-lg">
                             <div class="animated" data-animate="fadeInUp" data-delay="1.55">
                                 <div class="header-image-muscari">
                                     <img src="~/images/muscari/header-image-muscari.png" style="visibility: hidden;" alt="header">
@@ -1527,7 +1527,7 @@ global marketplace for students.</p>
             <div class="row">
                 <div class="col-sm-6 col-xl-4 res-l-bttm">
                     <a class="footer-brand animated" data-animate="fadeInUp" data-delay="0" href="./">
-                        <img class="logo logo-light" alt="logo" src="~/images/logo-full-white.png" srcset="~/images/logo-full-white2x.png 2x">
+                        <img class="logo logo-light" alt="logo" src="~/images/logo-full-white.png">
                     </a>
                     <ul class="social">
                         <li class="animated" data-animate="fadeInUp" data-delay=".1">
