--- a/Cloudents.Ico/wwwroot/css/site.css
+++ b/Cloudents.Ico/wwwroot/css/site.css
@@ -103,7 +103,7 @@ html, body {
     width: 20rem; 
     position:fixed;
     bottom: 50px;
-    right:50px; 
+    right:75px; 
     z-index: 9999; 
     text-align: center;
     box-shadow: 0px 0px 3px 0px rgba( 2, 2, 2, 0.5 ) inset;
@@ -128,8 +128,13 @@ html, body {
 #closeTelegramPopUp{
     width: 25px; 
     position:absolute; 
-    right: 0; 
-    top:5px;
+    color: #3532d5;
+    right: 10px;
+    top: 7px;
+    text-decoration: none;
+}
+#closeTelegramPopUp:hover{
+    color: #3532d5;
 }
  /* a.popUpbtn{
     border-radius: 17px;
@@ -734,6 +739,9 @@ h1, h2, h3, h4, h5, h6, blockquote {
 }
 
 @media only screen and (max-width: 480px) {
+    #telegramPopUp{
+        display: none;
+    }
     body {
         min-width: 320px;
     }
@@ -756,6 +764,9 @@ h1, h2, h3, h4, h5, h6, blockquote {
 }
 
 @media only screen and (max-width: 375px) {
+    #telegramPopUp{
+        display: none;
+    }
     .btn + .btn {
         margin-top: 5px;
     }
@@ -2512,6 +2523,7 @@ select:focus {
 
     .site-header .logo-light {
         display: none;
+        border-radius: 0;
     }
 
 .navbar .navbar-nav > li:hover > a {
@@ -2538,6 +2550,7 @@ select:focus {
         .navbar .navbar-nav > li > a.nav-link.btn {
             min-width: auto;
             padding: 0 23px;
+            border-radius: 25px;
         }
 
             .navbar .navbar-nav > li > a.nav-link.btn.active {
@@ -2776,10 +2789,12 @@ select:focus {
 
         .site-header .navbar.is-transparent .navbar-brand .logo-dark {
             display: none;
+            border-radius: 0;
         }
 
         .site-header .navbar.is-transparent .navbar-brand .logo-light {
             display: block;
+            border-radius: 0;
         }
 
     .site-header.has-fixed .navbar {
@@ -2849,10 +2864,12 @@ select:focus {
 
 .theme-light .site-header .navbar.is-transparent .navbar-brand .logo-dark {
     display: block;
+    border-radius: 0;
 }
 
 .theme-light .site-header .navbar.is-transparent .navbar-brand .logo-light {
     display: none;
+    border-radius: 0;
 }
 
 .theme-light .site-header.has-fixed .navbar {
@@ -5889,8 +5906,8 @@ select:focus {
 
     .footer-subscription .btn.btn-plane {
         position: absolute;
-        top: 5px;
-        right: -50px;
+        top: 15px;
+        right: -60px;
         padding: 0 10px;
         min-width: 110px;
         background: #16a4fd;
@@ -7652,10 +7669,12 @@ select:focus {
 
     .theme-lavendar .site-header.has-fixed .navbar.is-transparent .navbar-brand .logo-dark {
         display: block;
+        border-radius: 0;
     }
 
     .theme-lavendar .site-header.has-fixed .navbar.is-transparent .navbar-brand .logo-light {
         display: none;
+        border-radius: 0;
     }
 
     .theme-lavendar .site-header.has-fixed .btn.btn-white {
@@ -8108,7 +8127,7 @@ select:focus {
     }
 
     .btns li {
-        margin: 5px 3px;
+        margin: 16px 3px;
     }
 }
 
@@ -9178,16 +9197,18 @@ select:focus {
         box-shadow: 0 10px 40px rgba(93, 70, 232, 0.15);
     }
 
-    .theme-muscari .site-header.has-fixed .navbar-nav > li > a {
+    .theme-muscari .site-header.has-fixed .navbar-nav > li > a, .theme-muscari .site-header.has-fixed  .language-switcher > a {
         color: #8484a4;
     }
 
     .theme-muscari .site-header.has-fixed .navbar.is-transparent .navbar-brand .logo-dark {
         display: block;
+        border-radius: 0;
     }
 
     .theme-muscari .site-header.has-fixed .navbar.is-transparent .navbar-brand .logo-light {
         display: none;
+        border-radius: 0;
     }
 
     .theme-muscari .site-header.has-fixed .navbar .btn.btn-outline {
@@ -9641,7 +9662,7 @@ select:focus {
 .section-bg-patern.section-bg-light-alt {
     background: url(../images/pattern-muscari-light.png), #f7f8ff;
     background-size: 100%;
-    background-position: top 130px center;
+    background-position: top 250px center;
     background-repeat: no-repeat;
 }
 
