ICO favicon and links

--- a/Cloudents.Ico/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Ico/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>@ViewData["Title"] - Cloudents.Ico</title>
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/fav.png">
 
     <environment include="Development">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
