--- a/Cloudents.Ico/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Ico/Views/Shared/_Layout.cshtml
@@ -34,5 +34,7 @@
     <environment exclude="Development">
         <script src="~/dist/site.min.js" asp-append-version="true"></script>
     </environment>
+
+    @RenderSection("script", false)
 </body>
 </html>
