congrats page css

--- a/Cloudents.Web/ClientApp/components/registration/steps/registerAccount/registerAccount.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerAccount/registerAccount.less
@@ -3,21 +3,33 @@
 .step-account .step-wrapper, .dialog .limited-width.custom {
   .blue-points{
     color: @color-main-purple;
+    font-size: 32px;
   }
-
+  .money-done-img{
+    max-width: 220px;
+    margin-bottom: 32px;
+    margin-top: 32px;
+  }
   .continue-btn {
     margin-top: 13px;
     @media (max-width: @screen-xs) {
       margin-top: 0px;
     }
   }
-
   .done {
     p.congrats{
-      margin-bottom: 32px;
+      margin-bottom: 8px;
+
     }
     h1 {
       margin-bottom: 26px;
+      color: @color-main-purple;
+      font-size: 26px;
+    }
+    .congrats-heading{
+      color: @color-main-purple;
+      font-size: 26px;
+      margin-bottom: 1px;
     }
     .continue-btn {
       margin-top: 100px;
