Logo beta ICO page, header color white

--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -11,8 +11,8 @@
         <nav class="container">
 
                 <a class="navbar-brand animated" data-animate="fadeInDown" data-delay=".65" href="https://www.spitball.co/" target="_blank">
-                <img class="logo logo-dark" alt="logo" src="~/images/Spitball-blue.png">
-                <img class="logo logo-light" alt="logo" src="~/images/logo-full-white.png">
+                <img class="logo logo-dark" alt="logo" src="~/images/logo-beta.png">
+                <img class="logo logo-light" alt="logo" src="~/images/logo-beta.png">
             </a>
 
             <div class="language-switcher animated" data-animate="fadeInDown" data-delay=".75">
@@ -1540,7 +1540,7 @@
         <div class="row">
             <div class="col-sm-6 col-xl-4 res-l-bttm">
                 <a class="footer-brand animated" data-animate="fadeInUp" data-delay="0" href="./">
-                    <img class="logo logo-light" alt="logo" src="~/images/logo-full-white.png">
+                    <img class="logo logo-light" alt="logo" src="~/images/logo-beta.png">
                 </a>
                 <ul class="social">
                     <li class="animated" data-animate="fadeInUp" data-delay=".1">
