--- a/Cloudents.Ico/wwwroot/css/site.css
+++ b/Cloudents.Ico/wwwroot/css/site.css
@@ -4106,7 +4106,7 @@ select:focus {
 
 .event-info {
     margin-bottom: -30px;
-    pading-right: 20px;
+    padding-right: 20px;
 }
 
     .event-info .event-single-info {
