--- a/Cloudents.Ico/wwwroot/css/theme.css
+++ b/Cloudents.Ico/wwwroot/css/theme.css
@@ -230,7 +230,7 @@ a {
 
     .heading-animation:before {
         border-top-color: #2b56f5;
-        border-lef-colort: #2b56f5;
+        border-left-color: #2b56f5;
     }
 
     .heading-animation:after {
