--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -405,6 +405,9 @@
   @media (max-width: @screen-xs) {
     height: 88px;
   }
+  @media (max-width: @screen-sm) {
+    height: 95px;
+  }
   @media (max-width: 360px) {
     height: 88px;
   }
