Added delete question.

--- a/Cloudents.Management/Views/Home/Index.cshtml
+++ b/Cloudents.Management/Views/Home/Index.cshtml
@@ -7,6 +7,9 @@
     <li>
         <a asp-page="/MarkAsCorrect">Mark as correct</a>
     </li>
+    <li>
+        <a asp-page="/DeleteQuestion">Delete question</a>
+    </li>
 </ul>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
