suggest pop up fixed, answer btn show, price show, no errors

--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -1302,7 +1302,7 @@
          <div class="row">
             <div class="col-md-12">
                 <div class="gaps size-2x"></div>
-                <h3 class="sub-heading">Advisory Board to be announced soon...</h3>
+                <h3 class="sub-heading" style="text-transform: capitalize;">Advisory Board to be announced soon...</h3>
                 <div class="gaps size-2x"></div>
             </div>
         </div>
