--- a/Cloudents.Web/ClientApp/components/questionsSuggestPopUp/questionSuggestPopUp.less
+++ b/Cloudents.Web/ClientApp/components/questionsSuggestPopUp/questionSuggestPopUp.less
@@ -42,11 +42,11 @@ div.question-suggest {
       height: auto;
       min-height: 274px;
       @media (max-width: @screen-xs) {
-        min-height: 460px;
+        //min-height: 460px;
       }
       box-shadow: none;
       .v-carousel__controls {
-        .v-btn--icon.v-btn--small{
+        .v-btn--icon.v-btn--small {
           width: 20px;
         }
         .v-icon {
