--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -170,7 +170,7 @@
                 __insp.push(['wid', 348650174]);
                 @if (User.Identity.IsAuthenticated)
                 {
-                  <text>__insp.push(['identify', @User.Identity.Name])</text>
+                  <text>__insp.push(['identify', '@User.Identity.Name'])</text>
                 }
             var ldinsp = function () { if (typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=348650174&r=' + Math.floor(new Date().getTime() / 3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
             setTimeout(ldinsp, 0);
